fixed project logo alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ hr {
   font-size: 0.8em;
 }
 
-/* Portfolio Section */
+/* Project Section */
 #portfolio {
   padding: 80px 0;
   background: #ffffff; /* Old browsers */
@@ -464,6 +464,11 @@ ol.type li a:hover {
   font-size: 20px;
   padding: 5px;
   color: #e87e04;
+}
+
+.project-logo {
+  width: 100px;
+  height: 100px;
 }
 
 /* Resume Section */
